--- a/sistema/backend/package.json
+++ b/sistema/backend/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "ecosapiens",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Hugo,Emanuel,Melina,Breno",
+  "author": "Emanuel Gomes",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   }
 }
